include navbar into starter template

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,18 @@
   margin: 0;
   padding: 0;
 }
+
+.navbar {
+  background-color: blue;
+  padding: 1rem;
+}
+
+.navbar ul {
+  display: flex;
+  list-style-type: none;
+}
+
+.navbar ul a {
+  text-decoration: none;
+  color: white;
+}
